[tool.poetry]
name = "monarch-semsim"
version = "0.1.0"
description = ""
authors = ["Tim  Putman <putmantime@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
oaklib = "^0.1.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
